--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "^2.1",
+        "hwi/oauth-bundle": "^0.6.2",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/httplug-bundle": "^1.11",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.36",
         "sonata-project/doctrine-orm-admin-bundle": "^3.6",
